# pypass

./: .gitignore  Dockerfile  pyproject.toml
passgen/: pyproject.toml
passgen_cli/: passgen_cli.py  pyproject.toml
passgen_web/: .dockerignore  passgen_web.py  pyproject.toml
pypass/app/: app.py
pypass/passgen/: passgen.py  routes.py
tests/: test_pypass.py
