[tool.poetry]
name = "pypass"
version = "0.1.0"
description = ""
authors = ["Onur Cayci <onur.cayci@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
mypy = "^0.910"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
