[tool.poetry]
name = "passgen"
version = "0.1.0"
description = ""
authors = ["Onur Cayci <onur.cayci@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
mypy = "^0.910"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
